# Traceback

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py
app/agent/: agent_graph.py  planner.py  state.py
app/api/: investigation_api.py
app/config/: settings.py
app/db/: postgres_client.py  vector_client.py
app/domain/: evidence.py
app/llm/: llm_client.py  prompt_builder.py
app/models/: request_models.py  response_models.py
app/rag/: constants.py  schema.py  utils.py
app/rag/ingestion/: chunker.py  document_loader.py  embedding_generator.py  vector_indexer.py
app/rag/pipeline/: rag_pipeline.py
app/rag/retrieval/: context_builder.py  query_embedder.py  vector_search.py
app/services/: investigation_service.py
app/telemetry/: logging.py
app/tools/: deployment_tool.py  log_tool.py  metrics_tool.py  rag_tool.py
docs/: ARCHITECTURE.md  DECISIONS.md  HLD.md  LLD.md  ROADMAP.md
scripts/: seed_data.py
tests/: test_health.py
