[project]
name = "ai-incident-investigation-assistant"
version = "0.1.0"
description = "Backend service for incident investigation using agent workflows and RAG."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Team" }]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "pgvector>=0.2",
  "tenacity>=8.3",
  "structlog>=24.1",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "langgraph>=0.2.7",
  "openai>=1.35",
]

[project.optional-dependencies]
rag = [
  "tiktoken>=0.7",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
